--- a/sunday-sites/travels/index.html
+++ b/sunday-sites/travels/index.html
@@ -14,13 +14,36 @@
 
     <h2>My travels from last times</h2>
 
+    <div class="index">
+        <div class="city" id="Amiens"><span>Amiens</span></div>
+        <div class="city" id="Amsterdam"><span>Amsterdam</span></div>
+        <div class="city" id="Genève"><span>Genève</span></div>
+        <div class="city" id="Socoa"><span>Socoa</span></div>
+        <div class="city" id="Bulgaria"><span>Bulgaria</span></div>
+        <div class="city" id="Lübeck"><span>Lübeck</span></div>
+        <div class="city" id="Marseille"><span>Marseille</span></div>
+        <div class="city" id="Cambrai"><span>Cambrai</span></div>
+        <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
+        <div class="city" id="Bilbao"><span>Bilbao</span></div>
+        <div class="city" id="Barcelone"><span>Barcelone</span></div>
+        <div class="city" id="Brussels"><span>Brussels</span></div>
+        <div class="city" id="LeHavre"><span>Le Havre</span></div>
+        <div class="city" id="Paris"><span>Paris</span></div>
+        <div class="city" id="Pirineos"><span>Pirineos</span></div>
+        <div class="city" id="Cévennes"><span>Cévennes</span></div>
+        <div class="city" id="Briançon"><span>Briançon</span></div>
+
+
+    </div>
+
     <div class="content">
 
-        <a href="#top" id="arriba">⇧</a>
+        <!-- <a href="#top" id="arriba">⇧</a> -->
 
         <div class="block">
             <h4>Mai 22</h4>
             <div class="cities">
+                <div class="city" id="Bilbao"><span>Bilbao</span></div>
                 <div class="city" id="Paris"><span>Paris</span></div>
                 <div class="city" id="LeHavre"><span>Le Havre</span></div>
                 <div class="city" id="Barcelone"><span>Barcelone</span></div>
@@ -30,7 +53,7 @@
         <div class="block">
             <h4>June 22</h4>
             <div class="cities">
-                ?
+                <div class="city" id="Barcelone"><span>Barcelone</span></div>
             </div>
         </div>
 
@@ -38,6 +61,7 @@
             <h4>July 22</h4>
             <div class="cities">
                 <div class="city" id="Cévennes"><span>Cévennes</span></div>
+                <div class="city" id="Bilbao"><span>Bilbao</span></div>
             </div>
         </div>
 
@@ -52,7 +76,7 @@
         <div class="block">
             <h4>Septembre 22</h4>
             <div class="cities">
-                ?
+                <div class="city" id="Amiens"><span>Amiens</span></div>
             </div>
         </div>
         <div class="block">
@@ -101,7 +125,6 @@
                 <div class="city" id="Paris"><span>Paris</span></div>
                 <div class="city" id="LeHavre"><span>Le Havre</span></div>
                 <div class="city" id="Cambrai"><span>Cambrai</span></div>
-                <div class="city" id="Paris"><span>Paris</span></div>
             </div>
         </div>
 
@@ -127,7 +150,7 @@
         <div class="block">
             <h4>June 23</h4>
             <div class="cities">
-                ?
+                <div class="city" id="Amiens"><span>Amiens</span></div>
             </div>
         </div>
 
@@ -174,15 +197,15 @@
 
     </div>
 
-    <div style="color: white;">
-        Made on a October 22nd of 2023 <br>
-        with my friend <a href="https://samdroual.fr">Sam</a> in <div class="city" id="Amiens"
-            style="width: fit-content; display: inline;"><span>Amiens</span></div><br>
-        <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px; margin-top: 10px;">
+    <div class="firm">
+
+        <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px;border: 2px solid white;">
+        <div><a href="https://sundaysites.cafe/">SundaySites</a> made on a October 22nd of 2023 with my friend <a
+                href="https://samdroual.fr">Sam</a> in <div class="city" id="Amiens"
+                style="width: fit-content; display: inline;"><span>Amiens</span></div>.
+        </div>
+
     </div>
-
-    https://maps.app.goo.gl/yZWb52n7hY2DBa6SA
-
 </body>
 
 </html>
