--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
   <p>
-    <a href="" onclick="alertMail()">Pablo Moreno</a><br>
+    <a href="#" onclick="alertMail()">Pablo Moreno</a><br>
     I'm a young spanish and french student, who loves create, early mornings and movies. Finishing my graphic
     design studies. Lately, I'm putting a lot of energy on making websites for people, for things or for fun.<br>
   </p>
