--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     </div>
 
     <form name="form" class="enter">
-      <input id="button" name="submit" style="display:none" />
-      <input class="identity" id="password" type='text' name='texte' value='' onkeypress="clickPress(event)" />
+      <input name="submit" style="display:none" />
+      <input id="password" type='text' name='texte' value='' onkeypress="clickPress(event)" />
     </form>
 
     <img src="assets/ascii-art.png" alt="pablo showing with his hands the LH City symbol. LH 4 EVER">
