--- a/exec/index.html
+++ b/exec/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-    <a href="https://www.youtube.com/results?search_query=l%27executeur+de+hong+kong" target="_blank" id="vaecouter">va écouter ➻</a>
+    <a href="https://www.youtube.com/results?search_query=l%27executeur+de+hong+kong" target="_blank" id="vaecouter">➻➻➻</a>
 
     <div class="table">
 
-        <a href="https://forms.gle/2w3Ks2LkXYkMSGR67" target="_blank" id="link">AJOUTES-EN!</a>
+        <a href="https://forms.gle/2w3Ks2LkXYkMSGR67" target="_blank" id="link">AJOUTER!</a>
     </div>
     
 
