--- a/exec/index.html
+++ b/exec/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <a href="https://www.youtube.com/results?search_query=l%27executeur+de+hong+kong" target="_blank" id="vaecouter">➻➻➻</a>
+    <a href="https://www.youtube.com/results?search_query=l%27executeur+de+hong+kong" target="_blank" id="vaecouter">Pour reunir les plus belles paroles du Travolta des océans...</a>
 
     <div class="table">
 
