--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     </div>
 
-    <img src="assets/ascii-art.png" alt="pablo is a happy young boy. LH 4 EVER">
+    <img src="assets/ascii-art.jpg" alt="pablo is a happy young boy. LH 4 EVER">
     
   </div>
 
