--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Primary Meta Tags -->
-  <title>saposaposaposaposaposaposaposaposapo</title>
+  <title>E-N-E-R-G-I-A</title>
   <meta name="title" content="Pablo Moreno">
   <meta name="description"
     content="Pablo Moreno is a energetic web designer, studying in France and working down to Bilbao.">
@@ -110,9 +110,9 @@
 
 
     <div class="image">
-      <a href="https://read.cv/pablomoreno" target="_blank">CV</a>
-      <a href="https://www.are.na/pablo-moreno" target="_blank">Are.na</a>
-      <a href="#" onclick="alertMail()">Email</a>
+      <a href="https://read.cv/pablomoreno" target="_blank" id="yellow">CV</a>
+      <a href="https://www.are.na/pablo-moreno" target="_blank" id="green">Are.na</a>
+      <a href="#" onclick="alertMail()" id="blue">Email</a>
       <img src="assets/ascii-art.jpg" alt="pablo is a happy young boy. LH 4 EVER">
     </div>
 
