--- a/si28/index.html
+++ b/si28/index.html
@@ -181,6 +181,7 @@ a:active {
 
 .deux > a:nth-of-type(1){
  	border-radius: var(--border-s) 0 0 var(--border-s)!important;
+  border-width: 1px 0 1px 1px;
 }
 
 .deux > a:nth-of-type(2){
