--- a/site-x-a/index.html
+++ b/site-x-a/index.html
@@ -20,11 +20,11 @@
         veille de ton appel. On dira que c'est un supplément du voyage à Rotterdam.<br><br>
         Je sais que je n'ai pas été là pour prendre ou donner des nouvelles, même si je pense à toi souvent. Je me rend
         compte que j'attend trop de voir les personnes et je délaisse le contact à distance. Je dois corriger ça,
-        surtout maintenant où l'école m'absorbe tant que ça me ferait du bien de sortir de cette bulle.<br><br>
+        surtout maintenant que l'école m'absorbe tant que ça me ferait du bien de sortir de cette bulle.<br><br>
         Je t'envois cette double lettre pour dire que je suis désolé que ça n'ai pas marché, mais te remercier d'avoir
         tenté, d'avoir mis ton énergie. Je n'ai pas pu donner ce qu'il fallait pour cette relation, mais j'ai beaucoup
-        aimé tout ce qu'on a fait ensemble. Je suis triste de ne pas avoir continué mais content aussi si ça laisse la
-        place à ce que tu cherche vraiment, et que je ne peux te donner.<br><br>
+        aimé tout ce qu'on a fait ensemble. Je suis un peu triste de ne plus pouvoir se voir comme avant mais content aussi si ça laisse la
+        place à ce que tu cherche vraiment.<br><br>
         Je voulais te dire un peu ça, que je trouve que tu est superbe-lle, que j'aime trop ta motivation et ton
         engagement, toutes les choses que tu fais dans ton quotidien, ton indépendance et savoir vivre par toi même...
         Je suis content de te connaître et savoir que tu mènes ta vie de cette façon, que j'admire parce que c'est comme
