--- a/site-x-a/index.html
+++ b/site-x-a/index.html
@@ -12,6 +12,15 @@
 
 <body>
 
+    <div class="dino">
+        <div></div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d366.5304287205771!2d3.515209386451895!3d51.48362121315141!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sfr!2sfr!4v1700476236728!5m2!1sfr!2sfr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+
     <span>⬇️</span>
 
     <p id="lettre">Chère A.<br><br>
@@ -23,7 +32,8 @@
         surtout maintenant que l'école m'absorbe tant que ça me ferait du bien de sortir de cette bulle.<br><br>
         Je t'envois cette double lettre pour dire que je suis désolé que ça n'ai pas marché, mais te remercier d'avoir
         tenté, d'avoir mis ton énergie. Je n'ai pas pu donner ce qu'il fallait pour cette relation, mais j'ai beaucoup
-        aimé tout ce qu'on a fait ensemble. Je suis un peu triste de ne plus pouvoir se voir comme avant mais content aussi si ça laisse la
+        aimé tout ce qu'on a fait ensemble. Je suis un peu triste de ne plus pouvoir se voir comme avant mais content
+        aussi si ça laisse la
         place à ce que tu cherche vraiment.<br><br>
         Je voulais te dire un peu ça, que je trouve que tu est superbe-lle, que j'aime trop ta motivation et ton
         engagement, toutes les choses que tu fais dans ton quotidien, ton indépendance et savoir vivre par toi même...
@@ -34,14 +44,6 @@
         Beaucoup de bisous,<br>
         je pense à toi<br><br>
         Pablo</p>
-
-    <div class="dino">
-        <div></div>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d366.5304287205771!2d3.515209386451895!3d51.48362121315141!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sfr!2sfr!4v1700476236728!5m2!1sfr!2sfr"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
 
 
     <div class="triple">
