--- a/site-x-a/index.html
+++ b/site-x-a/index.html
@@ -46,14 +46,16 @@
 
 
     <div class="triple">
-        <div> <img src="img1.JPG" alt="">
-            <img src="img3.JPG" alt="">
-            <img src="img6.JPG" alt="">
+        <div> 
+            <a href="img3.JPG"><img src="img3.JPG" alt=""></a>
+            <a href="img1.JPG"><img src="img1.JPG" alt=""></a>
+            <a href="img6.JPG"><img src="img6.JPG" alt=""></a>
         </div>
 
-        <div> <img src="img9.JPG" alt="">
-            <img src="img8.JPG" alt="">
-            <img src="img10.JPG" alt="">
+        <div> 
+            <a href="hervé.mp4"><img src="img9.JPG" alt=""></a>
+            <a href="img8.JPG"><img src="img8.JPG" alt=""></a>
+            <a href="img10.JPG"><img src="img10.JPG" alt=""></a>
         </div>
 
     </div>
