--- a/memoire/index.html
+++ b/memoire/index.html
@@ -16,124 +16,120 @@
         <div class="progressbar"></div>
     </div> -->
 
-
-
-    <div id="optionsButton" class="pointer">
-        <h3>Options</h3>
-    </div>
-
-    <div class="sideLeft">
-        <h3 id="sommaireButton" class="pointer">Index</h3>
-        <h3 id="notesButton" class="pointer">Prise de notes</h3>
-    </div>
-
-
     <span class="notifNotes pointer">+1 note</span>
 
-    <div class="notesPage">
-        <span onclick="displaynotes()" class="closer pointer">×</span>
-        <div class="header">
-            <h2>Prise de notes</h2>
-            <div>
-                <!-- <small>séléctionnez du texte et appuyez sur la touche N du clavier</small> -->
-                <small>téléchargez ces notes <img src="assets/img/download.png"></small>
-            </div>
-        </div>
-    </div>
+    <h3 id="sommaireButton" class="sideLeft pointer">Index</h3>
+    <h3 id="notesButton" class="sideLeft pointer">Prise de notes</h3>
+    <h3 id="optionsButton" class="sideLeft pointer">Options</h3>
 
-    <div class="optionsPage">
-        <span onclick="displayoptions()" class="closer pointer">×</span>
-
-        <h2>Options</h2>
-        <h4>Tipographie</h4>
-        <button onclick="decreaseFontSize()" class="pointer">Réduire </button>
-        <button onclick="resetFontSize()" class="pointer">Par défaut</button>
-        <button onclick="increaseFontSize()" class="pointer">Agrandir</button>
-
-        <h4>Écran</h4>
-        <button class="fullscreen pointer">Plein écran</button>
-
-        <h4>Thème</h4>
-        <button class="">Clair</button>
-        <button class="">Sombre</button>
-        <button class="">Custom</button>
-    </div>
-
-    <div class="sommairePage">
-        <h2>Index</h2>
-        <h4><a href="#1">𝐼. Des nouveaux mondes à bâtir</a></h4>
-        <details>
-            <summary><a href="#1a">a. La naissance d’Internet</a></summary>
-            <ul>
-                <li><a href="#1anaissance">Tout commence par les réseaux</a></li>
-                <li><a href="#1autilisateurices">Qui les utilise?</a></li>
-                <li><a href="#1aservice">À quoi servent-ils à ce moment là?</a></li>
-                <li><a href="#1ainterconnexion">Interconnexion des réseaux: Internet</a></li>
-                <li><a href="#1acroissance">Croissance de l’Internet toujours très dirigée</a></li>
-                <li><a href="#1ahippies">La culture hippie s’empare des ordinateurs et réseaux</a></li>
-            </ul>
-        </details>
-
-        <details>
-            <summary>b. Imaginer cet espace vierge</summary>
-            <ul>
-                <li>Quels visions pour les réseaux et Internet?</li>
-                <li>Un nouveau langage au sein d’Internet: HTML</li>
-                <li>Innovation ascendante</li>
-                <li>Conception de la part des utilisateurs</li>
-                <li>Territoire foisonnant: désir de créer et de partager</li>
-            </ul>
-        </details>
-
-
-        <h4>𝐼𝐼. Au web de nos jours</h4>
-        <details>
-            <summary>a. Le web devient adulte</summary>
-            <ul>
-                <li>Comment a t-il évolué?</li>
-                <li>Un web marchand</li>
-                <li>De la participation à l’observation</li>
-            </ul>
-        </details>
-        <details>
-            <summary>b. Un web par la machine/l’outilails</summary>
-            <ul>
-                <li>Quand le monde virtuel devient tout notre monde</li>
-                <li>Mais bâtit par les mêmes architectes</li>
-                <li>Le design “par défaut”</li>
-                <li>Où se trouvent les utopies?</li>
-            </ul>
-        </details>
-
-        <h4>𝐼𝐼𝐼. Réoccuper ces espaces</h4>
-        <details>
-            <summary>a. Concevoir un nouveau web</summary>
-            <ul>
-                <li>Handmade web</li>
-                <li>Qui pour l’imaginer?</li>
-            </ul>
-        </details>
-        <details>
-            <summary>b. Entretiens</summary>
-            <ul>
-                <li>Clara Pasteau:</li>
-                <li>???</li>
-            </ul>
-        </details>
+    <div class="sideRight">
+        <div id="" class="pointer">Bibliographie</div>
+        <div id="" class="pointer">Conclusion</div>
+        <div id="" class="pointer">𝐼𝐼𝐼. Réoccuper ces espaces</div>
+        <div id="" class="pointer">𝐼𝐼. Au web de nos jours</div>
+        <div id="" class="pointer">𝐼. Des nouveaux mondes à bâtir</div>
     </div>
 
 
-    <!-- 
-    <div class="bookeffect">
-        <div class="foldleft"></div>
-        <div class="foldright"></div>
-      </div>
-       -->
+
+
+
+
+
     <div class="book">
-        <div class="bookPageLeft">
-        </div>
+
+
 
         <main class="bookLeft">
+
+            <div class="sommairePage">
+                <h2>Index</h2>
+                <h4><a href="#1">𝐼. Des nouveaux mondes à bâtir</a></h4>
+                <details>
+                    <summary><a href="#1a">a. La naissance d’Internet</a></summary>
+                    <ul>
+                        <li><a href="#1anaissance">Tout commence par les réseaux</a></li>
+                        <li><a href="#1autilisateurices">Qui les utilise?</a></li>
+                        <li><a href="#1aservice">À quoi servent-ils à ce moment là?</a></li>
+                        <li><a href="#1ainterconnexion">Interconnexion des réseaux: Internet</a></li>
+                        <li><a href="#1acroissance">Croissance de l’Internet toujours très dirigée</a></li>
+                        <li><a href="#1ahippies">La culture hippie s’empare des ordinateurs et réseaux</a></li>
+                    </ul>
+                </details>
+
+                <details>
+                    <summary>b. Imaginer cet espace vierge</summary>
+                    <ul>
+                        <li>Quels visions pour les réseaux et Internet?</li>
+                        <li>Un nouveau langage au sein d’Internet: HTML</li>
+                        <li>Innovation ascendante</li>
+                        <li>Conception de la part des utilisateurs</li>
+                        <li>Territoire foisonnant: désir de créer et de partager</li>
+                    </ul>
+                </details>
+
+
+                <h4>𝐼𝐼. Au web de nos jours</h4>
+                <details>
+                    <summary>a. Le web devient adulte</summary>
+                    <ul>
+                        <li>Comment a t-il évolué?</li>
+                        <li>Un web marchand</li>
+                        <li>De la participation à l’observation</li>
+                    </ul>
+                </details>
+                <details>
+                    <summary>b. Un web par la machine/l’outilails</summary>
+                    <ul>
+                        <li>Quand le monde virtuel devient tout notre monde</li>
+                        <li>Mais bâtit par les mêmes architectes</li>
+                        <li>Le design “par défaut”</li>
+                        <li>Où se trouvent les utopies?</li>
+                    </ul>
+                </details>
+
+                <h4>𝐼𝐼𝐼. Réoccuper ces espaces</h4>
+                <details>
+                    <summary>a. Concevoir un nouveau web</summary>
+                    <ul>
+                        <li>Handmade web</li>
+                        <li>Qui pour l’imaginer?</li>
+                    </ul>
+                </details>
+                <details>
+                    <summary>b. Entretiens</summary>
+                    <ul>
+                        <li>Clara Pasteau:</li>
+                        <li>???</li>
+                    </ul>
+                </details>
+            </div>
+
+            <div class="notesPage">
+                <!-- <span onclick="displaynotes()" class="closer pointer">×</span> -->
+                <div class="header">
+                    <h2>Prise de notes</h2>
+                    <!-- <small>séléctionnez du texte et appuyez sur la touche N du clavier</small> -->
+                    <img src="assets/img/download.png">
+                </div>
+            </div>
+
+            <div class="optionsPage">
+                <h2>Options</h2>
+                <h4>Tipographie</h4>
+                <button onclick="decreaseFontSize()" class="pointer">Réduire </button>
+                <button onclick="resetFontSize()" class="pointer">Par défaut</button>
+                <button onclick="increaseFontSize()" class="pointer">Agrandir</button>
+
+                <h4>Écran</h4>
+                <button class="fullscreen pointer">Plein écran</button>
+
+                <h4>Thème</h4>
+                <button class="">Clair</button>
+                <button class="">Sombre</button>
+                <button class="">Custom</button>
+            </div>
+
         </main>
 
         <main class="bookRight">
@@ -406,12 +402,6 @@
                 outils à élargir le public des réseaux au-délà des cercles militaires ou scientifiques.</p>
 
         </main>
-
-        <div class="bookPageRight">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
 
     </div>
 
