--- a/pages/index.html
+++ b/pages/index.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-
-  <div class="grid"></div>
+<H2> Index</H2>
+  <ul class="grid"></ul>
 
   <!-- THIS IS THE GADGET ABOUT THE PASSWORD -->
   <form name="form" class="enter">
